# pdf-image-extractor

./: .env.dev  .env.prod  .gitignore  README.md  ecosystem.config.js  nginx.conf  pyproject.toml  start_backend_dev.sh  start_backend_prod.sh
.github/workflows/: ci-cd.yml
backend/: pyproject.toml  run_backend.sh
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  pdf.py
backend/app/core/: config.py  errors.py  logger.py
backend/app/schemas/: pdf.py  responses.py
backend/app/services/: pdf_service.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: footer.tsx  nav.tsx  pdf-uploader.tsx  theme-toggle.tsx  upload-area.tsx
frontend/src/config/: env.ts
frontend/src/features/pdf/: pdf-context.tsx  pdf.types.ts
frontend/src/features/pdf/components/: image-grid.tsx  image-viewer.tsx  pdf-uploader.tsx
frontend/src/lib/: api.ts  pdf-context.tsx  theme-provider.tsx
frontend/src/lib/constants/: index.ts
frontend/src/lib/contexts/: pdf-context.tsx
frontend/src/lib/services/: pdf.service.ts
frontend/src/lib/types/: pdf.types.ts
frontend/src/pages/: about.tsx  terms.tsx
frontend/src/styles/: index.css
