[tool.poetry]
name = "pdf-image-extractor"
version = "0.1.0"
description = "A web application to extract images from PDF files"
authors = ["Ilyas Wadjinny <ilyas.wadjinny@gmail.com>"]
packages = [
    { include = "app", from = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pymupdf = "^1.23.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"